# ARIA

./: .gitignore  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MEDA_COMO_USAR.md  MEDA_INTEGRATION_PLAN.md  MEDA_QUICKSTART.md  MEDA_README.md  PAPER_EXPERIMENTS.md  PROJECT_STRUCTURE.md  PYTHON_IMPLEMENTATION_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_PYTHON.md  TEST_RESULTS.md  VISUAL_MAP.md  YOLO_COGNITIVE_LOOP.md  pyproject.toml  run_tests.py  test_streaming.py  test_streaming_simple.py
.github/workflows/: ci.yml
crates/aria-brain/: Cargo.toml
crates/aria-brain/src/: action_justifier.rs  action_synthesizer.rs  blackboard.rs  goal_manager.rs  lib.rs  planner.rs  policy_manager.rs  rule_checker.rs  safety_supervisor.rs  scheduler.rs  state_estimator.rs  world_model.rs
crates/aria-cli/: Cargo.toml
crates/aria-cli/src/: aria_bench.rs  aria_demo_brain.rs  aria_recv.rs  aria_send.rs
crates/aria-domain/: Cargo.toml
crates/aria-domain/src/: entities.rs  error.rs  lib.rs  traits.rs
crates/aria-ima/: Cargo.toml
crates/aria-ima/src/: homeostasis.rs  lib.rs  novelty.rs  stigmergy.rs
crates/aria-perception/: Cargo.toml
crates/aria-perception/src/: audio.rs  lib.rs  slam.rs  yolo.rs
crates/aria-ports/: Cargo.toml
crates/aria-ports/src/: actuators.rs  lib.rs  sensors.rs
crates/aria-sdk/: Cargo.toml
crates/aria-sdk/src/: lib.rs
crates/aria-telemetry/: Cargo.toml
crates/aria-telemetry/src/: ccem.rs  codec.rs  compression.rs  crypto.rs  delta.rs  fec.rs  lib.rs  link_health.rs  packetization.rs  qos.rs  recovery.rs  router.rs  transport.rs
examples/: complete_demo.py
scripts/: download_meda.py  test_yolo_system.py
src/aria_sdk/: __init__.py
src/aria_sdk/brain/: __init__.py  action_synthesizer.py  goal_manager.py  safety_supervisor.py  state_estimator.py  world_model.py
src/aria_sdk/cli/: __init__.py  aria_bench.py  aria_demo_brain.py  aria_recv.py  aria_send.py
src/aria_sdk/domain/: __init__.py  entities.py  protocols.py
src/aria_sdk/examples/: __init__.py  cognitive_loop_demo.py  cognitive_loop_yolo.py  energy_drain_comparison.py  full_system_demo.py  meda_demo.py  meda_monitor.py  meda_visualizer.py  telemetry_monitor.py
src/aria_sdk/ima/: __init__.py  homeostasis.py  novelty.py  stigmergy.py
src/aria_sdk/perception/: __init__.py  audio.py  yolo.py  yolo_detector.py
src/aria_sdk/ports/: __init__.py  actuators.py  sensors.py
src/aria_sdk/storage/: __init__.py  data_storage.py
src/aria_sdk/telemetry/: __init__.py  ccem.py  codec.py  compression.py  crypto.py  delta.py  fec.py  meda_adapter.py  packetization.py  qos.py  transport.py
src/aria_sdk/tools/: __init__.py  data_analyzer.py  telemetry_receiver.py
test/: QUICK_REFERENCE.py  __init__.py  requirements-test.txt  test_codec.py  test_compression.py  test_entities.py  test_integration.py  test_storage.py  test_streaming.py
tests/: test_codec.py
