[package]
name = "aria-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
nalgebra = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
