[package]
name = "aria-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aria-domain = { path = "../aria-domain" }

tokio = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
ring = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
reed-solomon-erasure = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall = { workspace = true }
